# ChironixHusky

./: CMakeLists.txt  README.md  package.xml
assets/: targetgoal.csv
launch/: husky_rotate_cpp.launch  husky_rotate_py.launch
src/: rotate_husky.py  rotate_node.cpp
